# capstone-project-cbondurant

./: .gitignore  CMakeLists.txt  lipuma.pro
Deliverables/: D1_ProjectSpec.md  D3_LoFi_Prototype.md  D4_Midterm_Documentation.md  userVerbs.md
Reflections/: Week_5_reflection.md
src/: CMakeLists.txt  canvas.cpp  canvas.hpp  fractalLine.cpp  fractalLine.hpp  lipuma.pro  main.cpp  main.pro  pointHelper.hpp  remapper.pro
src/drawable/: CMakeLists.txt  drawable.hpp  editPoint.cpp  editPoint.hpp  fractalCurve.cpp  fractalLine.cpp  fractalLine.hpp
src/tool/: CMakeLists.txt  fractalTool.cpp  fractalTool.hpp  selectionTool.cpp  selectionTool.hpp  tool.cpp  tool.hpp  toolManager.cpp  toolManager.hpp
src/widget/: canvas.cpp  toolSelector.cpp  toolSelector.hpp
tests/: test_pointHelper.cpp
